tests/ui/all_variants_skipped.stderr
error: all enum variants are `#[quickcheck(skip)]`; `arbitrary` cannot pick a variant
 --> tests/ui/all_variants_skipped.rs:6:3
  |
6 |   A,
  |   ^
